# sensorfusion_ws

devel/: .catkin  .rosinstall  setup.sh
devel/include/object_detect/: object_detect_result.h
devel/lib/gmsl_n_cameras/: gmsl_n_cameras_node
devel/lib/pkgconfig/: gmsl_n_cameras.pc  object_detect.pc
devel/lib/python2.7/dist-packages/object_detect/msg/: __init__.py  _object_detect_result.py
devel/share/common-lisp/ros/object_detect/msg/: _package.lisp  _package_object_detect_result.lisp  object_detect-msg.asd  object_detect_result.lisp
devel/share/gennodejs/ros/object_detect/msg/: _index.js  object_detect_result.js
devel/share/gmsl_n_cameras/cmake/: gmsl_n_camerasConfig.cmake
devel/share/object_detect/cmake/: object_detect-msg-extras.cmake  object_detect-msg-paths.cmake  object_detectConfig.cmake
devel/share/roseus/ros/object_detect/: manifest.l
devel/share/roseus/ros/object_detect/msg/: object_detect_result.l
src/gmsl_n_cameras/launch/: gmsl_n_cameras.launch
src/gmsl_n_cameras/src/: main.cpp
src/object_detect/: CMakeLists.txt  PX2 环境感知算法.docx  package.xml
src/object_detect/dynamic_object/: BDD12_detector.data  BDD12_detector.names  YOLOV3_85_test.cfg  dynamic-object-detect.py
src/object_detect/msg/: object_detect_result.msg
src/object_detect/plot_camobj/: plot_camobj.cpp
src/object_detect/static_object/: cls-tl.cfg  cls-tl.data  cls-tl_2000.weights  labels.txt  static-object-detect.py  static.data  static.names  yolov3-85-0.25c-static-test.cfg
